--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -4,6 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Mời Quý khách tham dự "HSBC Webinar: Đối Mặt Với Rủi Ro Gian Lận Lừa Đảo Trên Không Gian Mạng"</title>
 <style type="text/css">
+html {
+    -webkit-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+}
 * {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
