--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -67,13 +67,13 @@ html {
                       <td height="40" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display: block"/></td>
                     </tr>
                     <tr>
-                      <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 30px; font-family: Arial, Helvetica, sans-serif !important;">Đối Mặt Với Rủi Ro Gian Lận Lừa Đảo Trên Không Gian Mạng: Trò chuyện với chuyên gia Hiếu PC và HSBC</td>
+                      <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 30px; font-family: Arial, Helvetica, sans-serif !important;">Webinar - Trò chuyện với chuyên gia <span style="display: inline-block; white-space: nowrap">Hiếu PC và HSBC</span></td>
                     </tr>
                     <tr>
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Trong bối cảnh tội phạm mạng ngày càng tinh vi, HSBC phối hợp cùng Hiếu PC – chuyên gia an ninh mạng, tổ chức buổi chia sẻ trực tuyến đặc biệt dành cho Quý khách hàng với chủ đề <strong>&quot;Đối Mặt Với Rủi Ro Gian Lận Lừa Đảo Trên Không Gian Mạng: Trò chuyện với chuyên gia Hiếu PC và HSBC&quot;</strong></td>
+                      <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Trong bối cảnh tội phạm mạng ngày càng tinh vi, HSBC phối hợp cùng Hiếu PC - chuyên gia an ninh mạng, tổ chức buổi chia sẻ trực tuyến đặc biệt dành cho Quý khách hàng với chủ đề <strong>&quot;Đối Mặt Với Rủi Ro Gian Lận Lừa Đảo Trên Không Gian Mạng&quot;</strong>.</td>
                     </tr>
                     <tr>
                       <td height="40" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display: block"/></td>
@@ -102,10 +102,10 @@ html {
                           <tr>
                             <td align="left" bgcolor="#db0011" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
-                                  <td width="200" align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_2.jpg" width="200" height="auto" alt="" style="display: block"/></td>
+                                  <td width="200" align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_2.jpg" width="200" height="155" alt="" style="display: block"/></td>
                                   <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                       <tr>
-                                        <td align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #FFFFFF;">Đăng ký tại: hsbc<span>.</span>zoom<span>.</span>us/dk</td>
+                                        <td align="left" style="margin: 0; padding: 10px 0 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_box_3.jpg" width="253" height="auto" alt="" style="display: block"/></td>
                                       </tr>
                                       <tr>
                                         <td align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.3; color: #FFFFFF;">(Quý khách vui lòng sao chép đường dẫn và dán vào trình duyệt web để đăng ký)</td>
