--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -105,7 +105,11 @@ html {
                                   <td width="200" align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_2.jpg" width="200" height="155" alt="" style="display: block"/></td>
                                   <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                       <tr>
-                                        <td align="left" style="margin: 0; padding: 10px 0 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_box_3.jpg" width="253" height="auto" alt="" style="display: block"/></td>
+                                        <td align="left" style="margin: 0; padding: 10px 0 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #FFFFFF;"><table border="0" cellpadding="0" cellspacing="0" class="chs_body">
+											<tr>
+												<td align="left" valign="top" bgcolor="#FFFFFF" style="margin: 0; padding: 5px 10px; border: 5px outset #EEEEEE; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #db0011;"><strong>Đăng ký tại: hsbc<span>.</span>zoom<span>.</span>us/dk</strong></td>
+											</tr>
+											</table></td>
                                       </tr>
                                       <tr>
                                         <td align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.3; color: #FFFFFF;">(Quý khách vui lòng sao chép đường dẫn và dán vào trình duyệt web để đăng ký)</td>
